--- a/forgesample/wwwroot/index.html
+++ b/forgesample/wwwroot/index.html
@@ -15,8 +15,8 @@
     <!-- .NET SignalR -->
     <script src="//unpkg.com/@aspnet/signalr@1.1.0/dist/browser/signalr.min.js"></script>
     <!-- Files for this project -->
-    <script src="/js/ForgeDesignAutomation.js"></script>
     <script src="/js/ForgeViewer.js"></script>
+    <script src="/js/ForgeDesignAutomation.js"></script>
     <style>
         #outputlog {
             height: 100%; /*calc(100vh - 475px);*/
@@ -139,7 +139,10 @@
     <div class="container-fluid" style="margin-top: 70px;">
         <div class="row">
             <div class="col-sm-3" id="leftColumn">
-                <label class="form-check-label">Input assembly file (<span id="fileName">default</span>)</label>
+                <label class="form-check-label">
+                    Input assembly file (<span id="fileName">default</span>)
+                    <span class="glyphicon glyphicon-info-sign" title="If you don't upload a zip file, the default assembly will be used"></span>
+                </label>
                 <br />
                 <input type="file" id="inputFile" style="position: fixed; top: -100px;"></input>
                 <div id="fileOptionsContainer"></div>
@@ -147,7 +150,7 @@
                 <button type="button" class="btn btn-default" id="translateFile">Translate zip file</button>
                 <br />
                 <br />
-                <label class="form-check-label">Options:</label>
+                <label class="form-check-label">Shrink wrap options:</label>
                 <div id="optionsContainer"></div>
                 <br />
                 <center><button type="button" class="btn btn-primary disabled" id="startWorkitem">Start workitem</button></center>
